# src/storage/api-docs/api-docs.json
@@ -484,6 +484,54 @@
                 }
             }
         },
+        "/api/v1/payments/create": {
+            "post": {
+                "tags": [
+                    "Payment"
+                ],
+                "operationId": "799d924fcd5f9188f6b05f7541fb7f5d",
+                "parameters": [
+                    {
+                        "name": "type",
+                        "in": "query",
+                        "description": "Payment Type",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "enum": [
+                                "credit_card"
+                            ]
+                        }
+                    },
+                    {
+                        "name": "detail",
+                        "in": "query",
+                        "description": "Json Detail",
+                        "required": true,
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            }
+        },
         "/api/v1/user": {
             "get": {
                 "tags": [
